--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -1,3 +1,7 @@
 {
-  "testString": "[EN] = A simple example"
+  "infoBlocks" : [
+    {"title" : "", "text" : "Text about what this app does in 1-2 sentences"},
+    {"title" : "details", "text" : "More Meh text darüber was die app so macht und tut und soldetails about what this app doedetails about what this app doedetails about what this app doesssl"},
+    {"title" : "share", "text" : "Pls share!"}
+  ]
 }
